# adocker

model-manager/: .gitignore  Dockerfile  Makefile  pyproject.toml
model-manager/makefiles/: compile_proto.py  conda_env_config.yml  project.mk  proto.mk
