[tool.poetry]
name = "model-manager"
version = "0.1.0"
description = ""
authors = ["PRAMOD KUMAR <pramod.kumar@statusneo.com>"]
readme = "README.md"
packages = [{include = "model_manager"}]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "==6.0.0"
artifacts-keyring = "==0.3.2"
keyring = "==23.13.1"
setuptools = "==67.0.0"
wheel = "==0.38.4"
protobuf = "==4.21.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
